<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_discovery" android:icon="@android:drawable/ic_menu_camera"
            android:title="@string/action_discovery" />
        <item android:id="@+id/nav_expenses" android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/action_expenses" />
        <item android:id="@+id/nav_notes" android:icon="@android:drawable/ic_menu_slideshow"
            android:title="@string/action_notes" />
        <item android:id="@+id/nav_alerts" android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/action_alerts" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item android:id="@+id/nav_share" android:icon="@android:drawable/ic_menu_share"
                android:title="@string/action_share" />
            <item android:id="@+id/nav_send" android:icon="@android:drawable/ic_menu_send"
                android:title="@string/action_feedback" />
        </menu>
    </item>

</menu>