<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.underapps.carassist.fragments.ExpensesFragment">


    <io.codetail.widget.RevealFrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Put more views here if you want, it's stock frame layout  -->

        <android.support.v7.widget.CardView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/form_card"
            style="@style/CardView"
            app:cardBackgroundColor="@android:color/darker_gray"
            app:cardElevation="2dp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:visibility="invisible">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp">

                <android.support.design.widget.FloatingActionButton android:id="@+id/fabClose"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    app:fabSize="mini"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="@dimen/fab_margin"
                    android:layout_marginRight="@dimen/fab_margin"
                    android:layout_marginTop="@dimen/fab_margin"
                    android:layout_gravity="bottom|end"
                    android:src="@drawable/ic_close_white_36dp" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    >
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_description"
                        android:singleLine="true"
                        android:id="@+id/editTextDescription" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_id2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="10dp"
                    >
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_amount"
                        android:singleLine="true"
                        android:inputType="numberDecimal"
                        android:id="@+id/editTextAmount" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_id3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    >
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_date"
                        android:singleLine="true"
                        android:id="@+id/editTextDate" />
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_category"
                    android:textSize="12dp"
                    android:layout_marginBottom="5dp"
                    android:textColor="@color/colorAccent"
                    android:id="@+id/textView2" />

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinnerCategory" />


            </LinearLayout>
        </android.support.v7.widget.CardView>
    </io.codetail.widget.RevealFrameLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view_expenses"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:visibility="gone" />

    <android.support.design.widget.FloatingActionButton android:id="@+id/fab"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_gravity="bottom|end" android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_add_white_36dp" />

</FrameLayout>
